# canvas

./: Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  index.html  params.json
autom4te.cache/: output.1  requests  traces.0  traces.1
res/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  paint.cpp
src/.deps/: paint.Po
